fix(upload-note): fix collapse icon

--- a/holy-grail-frontend/src/features/Upload/UploadNote.css
+++ b/holy-grail-frontend/src/features/Upload/UploadNote.css
@@ -18,10 +18,22 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 10px 0 !important;
     gap: 2%;
     justify-content: space-between;
     margin: 1%;
-    padding: 10px 0 !important;
+    position: relative;
+}
+
+.expand-icon {
+    position: absolute;
+    right: 8px;
+}
+
+.collapse-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
 }
 
 .document-name-grid-container {
@@ -66,6 +78,7 @@
     font-weight: 500;
     margin-left: 3%;
     margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 
